# cmc-browser

./: README.md  pyproject.toml  setup.py
src/: browser.py
src/cmcbrowser/: browser.py
tests/: test_browser.py
